# rust-life

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md  rust-life.rs
.config/: nextest.toml
.github/workflows/: ci.yml
src/: args.rs  benchmarks.rs  board.rs  gui.rs  lib.rs  main.rs
src/gui/: mod.rs  test_helper.rs
tests/: test_bin.rs  test_mainthread.rs
