[package]

name = "rust-life"
version = "0.3.0"
authors = ["Mike MacDonald <crazymykl@gmail.com>"]
description = "An implementation of Conway's Game of Life."
license = "MIT"
repository = "https://github.com/crazymykl/rust-life"
edition = '2021'

[features]
unstable = []

[dependencies]

rand = "0.8.5"
piston_window = "0.132.0"
image = "0.25.5"
rayon = "1.10.0"
