[package]

name = "rust-life"
version = "0.4.1"
authors = ["Mike MacDonald <crazymykl@gmail.com>"]
description = "An implementation of Conway's Game of Life."
license = "MIT"
repository = "https://github.com/crazymykl/rust-life"
edition = '2021'

[features]
default = ["gui", "rayon"]
unstable = []
gui = ["dep:piston_window", "dep:image"]

[dependencies]

rand = "0.8.5"
piston_window = { version = "0.132.0", optional = true }
image = { version = "0.25.5", optional = true }
rayon = { version = "1.10.0", optional = true }
clap = { version = "4.5.26", features = ["derive"] }
