[package]

name = "rust-life"
version = "0.5.0"
authors = ["Mike MacDonald <crazymykl@gmail.com>"]
description = "An implementation of Conway's Game of Life."
license = "MIT"
repository = "https://github.com/crazymykl/rust-life"
edition = '2021'

[features]

default = ["gui", "rayon"]
unstable = []
test_mainthread = []
gui = ["dep:piston_window", "dep:image"]

[[test]]

name = "mainthread"
harness = false
path = "tests/test_mainthread.rs"
required-features = ["test_mainthread", "gui"]


[dependencies]

rand = "0.8.5"
piston_window = { version = "0.132.0", optional = true }
image = { version = "0.25.5", optional = true }
rayon = { version = "1.10.0", optional = true }
clap = { version = "4.5.26", features = ["derive"] }

[dev-dependencies]

assert_cmd = "2.0.16"
libtest-mimic = "0.8.1"
